--- a/shop/templates/shop/show_product_category.html
+++ b/shop/templates/shop/show_product_category.html
@@ -71,18 +71,15 @@
     <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2 h-full ">
         {% for i in allproduct %}
         {% if i.quantity > 0 %}
-        <a class="hover:scale-105 transform transition duration-300 ease-in-out" href="{% url 'Showdetall_product' i.id %}">
-            <div class="border bg-green-100 rounded-lg product-box">
+        <a class="hover:scale-105 transform transition duration-300 ease-in-out {% if i.id in expired_products %}pointer-events-none{% endif %}"
+            href="{% if i.id not in expired_products %}{% url 'Showdetall_product' i.id %}{% endif %}">
+            <div class="border {% if i.id in expired_products %}bg-red-300{% else %}bg-green-200{% endif %} rounded-lg product-box">
                 {% if i.image %}
                 <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
                 {% endif %}
                 <div class="p-4 content">
                     <h5 class="text-lg font-semibold mb-2">
-                        {% if i.id %}
                         <div class="text-blue-500 truncate">{{ i.product_name }}</div>
-                        {% else %}
-                        <span class="text-red-500">No ID available for this product</span>
-                        {% endif %}
                     </h5>
                     <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
                     <p class="text-gray-800 truncate">สถานะอุปกรณ์: {{ i.product_status }}</p>
@@ -99,11 +96,7 @@
             {% endif %}
             <div class="p-4 content">
                 <h5 class="text-lg font-semibold mb-2">
-                    {% if i.id %}
                     <div class="text-blue-500 truncate">{{ i.product_name }}</div>
-                    {% else %}
-                    <span class="text-red-500">No ID available for this product</span>
-                    {% endif %}
                 </h5>
                 <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
                 <p class="text-gray-800 truncate">สถานะอุปกรณ์: หมด</p>
@@ -113,6 +106,7 @@
         </div>
 
 
+        
         {% endif %}
         {% endfor %}
     </div>
