--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -126,8 +126,7 @@
       <!-- Dropdown Nav -->
       <nav :class="isOpen ? 'flex': 'hidden'" class="flex flex-col pt-4">
         {% if user.is_authenticated %}
-        <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link text-white opacity-75">{{ user.username
-          }}</a>
+        <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link text-white opacity-75">{{ user.username}}</a>
         <a href="/logout/" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
           ออกจากระบบ
         </a>
