--- a/user/templates/users/See_rentals_product.html
+++ b/user/templates/users/See_rentals_product.html
@@ -12,9 +12,6 @@
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
-                <th scope="col" class="p-4">
-                    <div class="flex items-center"></div>
-                </th>
                 <th scope="col" class="px-4 lg:px-6 py-3">ชื่อ</th>
                 <th scope="col" class="px-4 lg:px-6 py-3">ที่อยู่ผู้เช่า</th>
                 <th scope="col" class="px-4 lg:px-6 py-3">โทร</th>
@@ -23,7 +20,6 @@
         <tbody>
             {% for users in users %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ i.user}}</td>
                 <td class="px-4 lg:px-6 py-4">{{ users.user }}</td>
                 <td class="px-4 lg:px-6 py-4">{{ users.location }}</td>
                 <td class="px-4 lg:px-6 py-4">{{ users.phon }}</td>
@@ -36,9 +32,7 @@
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
-                <th scope="col" class="p-4">
-                    <div class="flex items-center"></div>
-                </th>
+                <th scope="col" class="px-4 lg:px-6 py-3">ชื่อ</th>
                 <th scope="col" class="px-4 lg:px-6 py-3">ชื่ออุปกรณ์</th>
                 <th scope="col" class="px-4 lg:px-6 py-3">วันที่เช่า</th>
                 <th scope="col" class="px-4 lg:px-6 py-3">ราคา</th>
@@ -47,7 +41,7 @@
         <tbody>
             {% for user in users %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ i.user}}</td>
+                <td class="px-4 lg:px-6 py-4">{{ user.user}}</td>
                 <td class="px-4 lg:px-6 py-4">{{user.product.product_name}}</td>
                 <td class="px-4 lg:px-6 py-4">{{ user.sell_date|date:"d M Y H:i:s" }}</td>
                 <td class="px-4 lg:px-6 py-4">{{ user.product.product_price|intcomma }}</td>
