--- a/user/templates/users/view_rental_history.html
+++ b/user/templates/users/view_rental_history.html
@@ -38,7 +38,7 @@
                     <td x-data="{ open: false }" class="text-center mt-10 mb-10">
                         <button @click="open = true"
                             class="my-2 h-12 bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded items-center justify-center">
-                            <i class="fa-solid fa-trash"></i>&nbsp;&nbsp;ลบ
+                            <i class="fa-solid fa-trash"></i>&nbsp;&nbsp;ยกเลิก
                         </button>
                         <div x-show="open" @click.away="open = false"
                             class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50">
