--- a/shop/templates/shop/Complete_buyproduct.html
+++ b/shop/templates/shop/Complete_buyproduct.html
@@ -6,7 +6,7 @@
 
 <div class="container mx-auto mt-12 text-center">
     <i class="fas fa-check-circle text-green-500 text-9xl mb-8"></i>
-    <h2 class="text-3xl font-bold">รายละเอียด ผู้เช่า-การเช่า</h2>
+    <h2 class="text-3xl font-bold">รายละเอียด ผู้ปล่อยเช่า-การเช่า</h2>
 </div>
 
 <div class="flex justify-center space-x-4 lg:space-x-20 mt-3 mb-3">
@@ -46,7 +46,7 @@
             
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                 <td class="px-4 lg:px-6 py-4">{{product.product_name}}</td>
-                <td class="px-4 lg:px-6 py-4">{{ product.datetime }}</td>
+                <td class="px-4 lg:px-6 py-4">{{ current_time }}</td>
                 <td class="px-4 lg:px-6 py-4">{{ product.product_price|intcomma }}</td>
             </tr>
             
